fixed yellow code - use Set.of
GitOrigin-RevId: 0bacb04bd33c288a57405d52e867785546de216d